--- a/Venta de dispositivos tecnologicos.csproj
+++ b/Venta de dispositivos tecnologicos.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="pcs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pcs.Designer.cs">
+      <DependentUpon>pcs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="fmenu.resx">
