--- a/Venta de dispositivos tecnologicos.csproj
+++ b/Venta de dispositivos tecnologicos.csproj
@@ -53,6 +53,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Database11DataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Database11DataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database11DataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database11DataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database11DataSet2.xsd</DependentUpon>
+    </Compile>
     <Compile Include="fmenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +109,28 @@
     </None>
     <None Include="Database11DataSet.xss">
       <DependentUpon>Database11DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Database11DataSet1.xsc">
+      <DependentUpon>Database11DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Database11DataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database11DataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database11DataSet1.xss">
+      <DependentUpon>Database11DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Database11DataSet2.xsc">
+      <DependentUpon>Database11DataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="Database11DataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database11DataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database11DataSet2.xss">
+      <DependentUpon>Database11DataSet2.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
