--- a/App.config
+++ b/App.config
@@ -9,6 +9,9 @@
         <add name="Venta_de_dispositivos_tecnologicos.Properties.Settings.Database11ConnectionString"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Database11.mdb"
             providerName="System.Data.OleDb" />
+        <add name="Venta_de_dispositivos_tecnologicos.Properties.Settings.sistemaConnectionString"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\sistema.mdb"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
